# python-custom-resource

./: Makefile  pyproject.toml
deploy/: resource-instance.template.yml  resource-provider.template.yml
scripts/: deploy.sh
src/: custom-resource.py
